# rust-rest-server-template

./: Cargo.toml  Dockerfile  LICENSE  README.md  sqlx-data.json
migrations/: 20220626151002_create_todo.sql
src/: basic_auth.rs  fallback.rs  lib.rs  main.rs  open_api.rs  rest_error.rs  todo.rs  todo_controller.rs  todo_repo.rs  todo_service.rs
